# tauri-window-save-state-bug

./: README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  window_custom.rs
