[package]
name = "window-save-state-bug"
version = "0.0.0"
description = "a repro of the bug"
authors = ["Hacksore"]
license = "MIT"
repository = "https://github.com/Hacksore/window-save-state-bug"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = [ "macos-private-api", "shell-open",
  "process-exit",
] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = [
  "full",
] } # Required for asynchronous operations
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
anyhow = "1.0.86"
cocoa = "0.25.0"

# macos dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25.0"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
