[package]
name = "window-save-state-bug"
version = "0.0.0"
description = "a repro of the bug"
authors = ["Hacksore"]
license = "MIT"
repository = "https://github.com/Hacksore/window-save-state-bug"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = [ "window-start-dragging", "shell-open", "macos-private-api", "process-exit" ] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
cocoa = "0.25.0"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
